# intake-polars

./: LICENSE  pyproject.toml
src/: intake_polars.py
